# fullon_ohlcv_service

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN_REST_FALLBACK.md  IMPLEMENTATION_GUIDE_REST_FALLBACK.md  Makefile  PIPELINE_FIX_SUMMARY.md  PROCESSCACHE_FIX_SUMMARY.md  PROCESS_CACHE_MIGRATION.md  README.md  REST_FALLBACK_COMPARISON.txt  REST_FALLBACK_FLOW.txt  REST_FALLBACK_IMPLEMENTATION_SUMMARY.md  REST_FALLBACK_QUICKREF.md  REST_FALLBACK_SUMMARY.md  TWO_PHASE_IMPLEMENTATION_SUMMARY.md  coverage.json  env.example  fix_this_shit.md  git_issues_rules.md  git_plan.md  pyproject.toml  run_all_examples.py  run_tests.sh  test_config.py  test_config_only.py  test_process_cache_api.py  test_rest_fallback.py  test_rest_fallback_simple.py  verify_migration.sh
# Empty = disabled (was: /tmp/fullon_log/: fullon_ohlcv.log - caused loguru format errors)
docs/: 11_FULLON_EXCHANGE_LLM_README.md  11_LLM_README.md  FULLON_OHLCV_LLM_QUICKSTART.md  FULLON_OHLCV_METHOD_REFERENCE.md  FULLON_OHLCV_SERVICE_LLM_REFERENCE.md  FULLON_ORM_LLM_METHOD_REFERENCE.md  FULLON_ORM_LLM_README.md  fullon_exchange_rest_example.py  fullon_ohlcv_example_for_llm.md  init_symbol_example.py  rest_example.py  trade_repository_example.py  websocket_example.py
examples/: 1  README.md  data_retrieval.py  demo_data.py  historic_collection_example.py  monitor_processes.py  ohlcv_collection_example.py  ohlcv_collection_one_symbol_example.py  ohlcv_collector_demo.py  run_all_examples.py  run_example_pipeline.py  simple_daemon_control.py  simple_test_pipeline.py  single_ohlcv_loop_example.py  single_trade_loop_example.py  single_trade_loop_fixed.py  test_capability_detection.py  test_kraken_capabilities.py  test_two_phase_collection.py  test_yahoo_complete.py  trade_collection_example.py  trade_collection_one_symbol_example.py  trade_collector_demo.py  trade_manager_example.py  trade_streaming_demo.py  trade_ws_collection_example.py  websocket_callbacks.py  yahoo_historical_example.py
examples/# Empty = disabled (was: /tmp/fullon_log/: fullon_ohlcv.log - caused loguru format errors)
legacy/: ohlcv_manager.py  trade_manager.py
src/fullon_ohlcv_service/: __init__.py  daemon.py  env_config.py
src/fullon_ohlcv_service/config/: __init__.py  database_config.py  settings.py
src/fullon_ohlcv_service/ohlcv/: __init__.py  collector.py  collector_master.py  historic_collector.py  live_collector.py  manager.py  utils.py
src/fullon_ohlcv_service/trade/: __init__.py  batcher.py  collector.py  daemon.py  global_batcher.py  historic_collector.py  live_collector.py  manager.py
src/fullon_ohlcv_service/utils/: __init__.py  add_symbols.py  admin_helper.py  process_cache.py
tests/: conftest.py  factories.py  test_documentation.py  test_live_trade_collection.py  test_orm_compatibility.py  test_orm_fixes_integration.py  validate_orm_fixes.py
tests/integration/: test_config_integration.py  test_daemon_pipeline.py
tests/unit/: test_add_symbols.py  test_baseline.py  test_config_settings.py  test_daemon.py  test_database_config.py  test_env_config.py  test_health_monitoring.py  test_historic_collector.py  test_ohlcv_collector.py  test_ohlcv_historic_collector.py  test_ohlcv_live_collector.py  test_ohlcv_manager.py  test_trade_batcher.py  test_trade_collector.py  test_trade_historic_collector.py  test_trade_live_collector.py  test_trade_manager.py
